2001-04-11  Martin Baulig  <baulig@suse.de>

	* gnome-messagebox.c: For images which we install in ../images/,
	use an absolute filename using GNOMEUIPIXMAPDIR.

Sun Mar 25 15:26:29 2001  George Lebl <jirka@5z.com>

	* gnome-icon-item.c: use the editable interface to get the values
	  instead of grabbing it directly of the structure, however added
	  FIXME's since that needs to be tested and verified

Sun Mar 25 03:04:13 2001  George Lebl <jirka@5z.com>

	* gnome-app-helper.c, gnome-file-saver.c, gnome-gconf.c,
	  gnome-recently-used.c, gnome-selector.c:  GConfClient
	  is no longer a GtkObject, so use g_object_* methods on
	  it and not gtk_object_

Sun Mar 25 02:13:43 2001  George Lebl <jirka@5z.com>

	* gnome-app-helper.c: gconf_client is now a GObject, not GtkObject

	* gnome-dock-band.c, gnome-dock-item.c, gnome-dock.c,
	  gnome-druid-page.c, gnome-druid.c: synthesizing GDK_EXPOSE events
	  apparently no longer works, what's more all this expose stuff is
	  now handled by GtkContainer itself, so remove the redundant code
	  and call the parent handler from expose functions that are left

	* gnome-dock-item.c:  First check if "is_floating" property exists
	  before settings it

	* gnome-init.c:  the gtk module require libgnome module, the
	  libgnomeui module requires the client and gconf modules

Sat Mar 24 23:55:06 2001  George Lebl <jirka@5z.com>

	* gnome-animator.c: include string.h to fix 64bitness

	* wap-textfu.c: fix a couple of uninitialized warnings

2001-03-24  Martin Baulig  <baulig@suse.de>

	* gnome-boxed.defs (GnomeCanvasPoints): Removed.
	(GnomeSelectorAsyncHandle): This is refcounted and has
	no init function.

2001-03-24  Martin Baulig  <baulig@suse.de>

	* maketypes.awk, makeenums.pl: Removed, we now use
	gnome-maketypes.awk and gnome-makeenums.pl which gets
	installed by libgnome-2.

2001-03-24  Martin Baulig  <baulig@suse.de>

	* gnome-app-helper.c (setup_uline_accel): Commented out
	for the moment [FIXME: fix this].
